--- a/cmake/projects/Boost/schemes/url_sha1_boost.cmake.in
+++ b/cmake/projects/Boost/schemes/url_sha1_boost.cmake.in
@@ -49,24 +49,24 @@ foreach(x ${boost_libs})
   list(APPEND boost_list "--without-${x}")
 endforeach()
 
-if("@MSVC@")
-  set(env_cmd "@HUNTER_MSVC_VCVARSALL@" "@HUNTER_MSVC_ARCH@")
+if(CMAKE_HOST_WIN32)
+  set(install_cmd "@HUNTER_PACKAGE_SOURCE_DIR@/b2.exe")
+  set(bootstrap_cmd "@HUNTER_PACKAGE_SOURCE_DIR@/bootstrap.bat")
 else()
-  set(env_cmd "")
+  set(install_cmd "@HUNTER_PACKAGE_SOURCE_DIR@/b2")
+  set(bootstrap_cmd "@HUNTER_PACKAGE_SOURCE_DIR@/bootstrap.sh")
 endif()
 
-if(CMAKE_HOST_WIN32)
-  set(install_cmd "b2.exe")
-  set(bootstrap_cmd "bootstrap.bat")
-else()
-  set(install_cmd "b2")
-  set(bootstrap_cmd "bootstrap.sh")
+if("@MSVC@")
+  list(INSERT install_cmd 0 "@HUNTER_MSVC_VCVARSALL@" @HUNTER_MSVC_ARCH@ &&)
+  list(INSERT bootstrap_cmd 0 "@HUNTER_MSVC_VCVARSALL@" @HUNTER_MSVC_ARCH@ &&)
 endif()
 
 if("@MINGW@")
   # Test scenario: MinGW installed in system, Visual Studio - not
   list(APPEND bootstrap_cmd "gcc")
 endif()
+
 if(APPLE)
   # Clear Xcode environment
   set(
@@ -101,15 +101,15 @@ ExternalProject_Add(
     "@HUNTER_PACKAGE_INSTALL_PREFIX@"
         # not used, just avoid creating Install/<name> empty directory
     CONFIGURE_COMMAND
-    ${env_cmd}
+    ""
     COMMAND
-    @HUNTER_PACKAGE_SOURCE_DIR@/${bootstrap_cmd}
+    ${bootstrap_cmd}
     BUILD_COMMAND
     ""
     BUILD_IN_SOURCE
     1
     INSTALL_COMMAND
-    @HUNTER_PACKAGE_SOURCE_DIR@/${install_cmd}
+    ${install_cmd}
     --layout=tagged
     -d0
     install
