--- a/cmake/projects/Boost/schemes/url_sha1_boost.cmake.in
+++ b/cmake/projects/Boost/schemes/url_sha1_boost.cmake.in
@@ -50,16 +50,16 @@ foreach(x ${boost_libs})
 endforeach()
 
 if(CMAKE_HOST_WIN32)
-  set(install_cmd "@HUNTER_PACKAGE_SOURCE_DIR@/b2.exe")
-  set(bootstrap_cmd "@HUNTER_PACKAGE_SOURCE_DIR@/bootstrap.bat")
+  set(install_cmd "b2")
+  set(bootstrap_cmd "bootstrap.bat")
 else()
-  set(install_cmd "@HUNTER_PACKAGE_SOURCE_DIR@/b2")
-  set(bootstrap_cmd "@HUNTER_PACKAGE_SOURCE_DIR@/bootstrap.sh")
+  set(install_cmd "./b2")
+  set(bootstrap_cmd "./bootstrap.sh")
 endif()
 
 if("@MSVC@")
-  list(INSERT install_cmd 0 "@HUNTER_MSVC_VCVARSALL@" @HUNTER_MSVC_ARCH@ &&)
-  list(INSERT bootstrap_cmd 0 "@HUNTER_MSVC_VCVARSALL@" @HUNTER_MSVC_ARCH@ &&)
+  list(INSERT install_cmd 0 "@HUNTER_MSVC_VCVARSALL@" @HUNTER_MSVC_ARCH@ && cd /D "@HUNTER_PACKAGE_SOURCE_DIR@" &&)
+  list(INSERT bootstrap_cmd 0 "@HUNTER_MSVC_VCVARSALL@" @HUNTER_MSVC_ARCH@ && cd /D "@HUNTER_PACKAGE_SOURCE_DIR@" &&)
 endif()
 
 if("@MINGW@")
